--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,13 +17,8 @@
   </div>
 
   <div>
-    <%= form.label :address, style: "display: block" %>
-    <%= form.text_field :address %>
-  </div>
-
-  <div>
-    <%= form.label :phone, style: "display: block" %>
-    <%= form.text_field :phone %>
+    <%= form.label :password, style: "display: block" %>
+    <%= form.text_field :password %>
   </div>
 
   <div>
