--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,13 +5,8 @@
   </p>
 
   <p>
-    <strong>Address:</strong>
-    <%= user.address %>
-  </p>
-
-  <p>
-    <strong>Phone:</strong>
-    <%= user.phone %>
+    <strong>Password:</strong>
+    <%= user.password %>
   </p>
 
 </div>
