--- a/app/views/test/login_form.html.erb
+++ b/app/views/test/login_form.html.erb
@@ -5,15 +5,16 @@
         <%= form_tag("/login", method: "post") do %>
         <div>
             <h1>ログイン</h1>
+            <p><%= @msg %></p>
         </div>
         <div>
             <p>ユーザー名</p>
-            <input class="input-box" name="name">
+            <input class="input-box" name="name" value="<%= "#{@name}" %>">
         </div>
 
         <div>
             <p>パスワード</p>
-            <input class="input-box" name="password" type="password">
+            <input class="input-box" name="password" type="password" value="<%= "#{@password}" %>">
         </div>
 
         <div class="form-last-button">
