--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -42,6 +42,12 @@ h1{
     /* margin-left: 10%; */
 }
 
+h2{
+    color: rgb(146, 146, 146);
+    font-family: 'ヒラギノ明朝 Pro W3', 'Hiragino Mincho Pro', '游明朝','Yu Mincho', '游明朝体', 'YuMincho','ＭＳ Ｐ明朝', 'MS PMincho', serif;
+    /* margin-left: 10%; */
+}
+
 hr {
     height: 1px;
     background-color: #000000;
