--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,9 @@
             <%= link_to "Logout", "/logout", method: "post", class:"header-text" %>
           </div>
           <div>
+            <%= link_to "Cards", "/bcard/index", class:"header-text" %>
+          </div>
+          <div>
             <%= link_to "Usersindex", "/users", class:"header-text" %>
           </div>
           <div>
