--- a/app/views/bcard/index.html.erb
+++ b/app/views/bcard/index.html.erb
@@ -2,11 +2,25 @@
 <p>Find me in app/views/bcard/index.html.erb</p>
 <%= link_to 'Add-Card', '/bcard/new', class: 'link_text' %>
 
-<div class="flex-parent">
+<div> <!-- class="display-center"-->
+    <table class="bcards">
+        <tr>
+            <th class="theader">Company</th>
+            <th class="theader">Customer</th>
+            <th class="theader">Phone</th>
+        </tr>
+        
     <% @BCards.each do |bcard| %>
-        <p>
-        <%= bcard.name %>
-        </p>
+        <tr>
+            <td class="td-company"><%= bcard.company_name %></td>
+            <td class="td-name"><%= bcard.name %></td>
+            <td class="td-phone_num"><%= bcard.phone_num %></td>
+            <td><%= bcard.user_id %></td>
+            <td><%= link_to 'edit', "/bcard/edit/#{bcard.id}", class: 'link_text' %></td>
+            
+        </tr>
     <% end %>
+    </table>
 
 </div>
+
