--- a/app/views/bcard/index.html.erb
+++ b/app/views/bcard/index.html.erb
@@ -5,9 +5,9 @@
 <div> <!-- class="display-center"-->
     <table class="bcards">
         <tr>
-            <th class="theader">Company</th>
-            <th class="theader">Customer</th>
-            <th class="theader">Phone</th>
+            <th class="th-company">Company</th>
+            <th class="th-name">Customer</th>
+            <th class="th-phone_num">Phone</th>
         </tr>
         
     <% @BCards.each do |bcard| %>
