--- a/app/views/bcard/edit.html.erb
+++ b/app/views/bcard/edit.html.erb
@@ -21,4 +21,4 @@
     <br>
 <% end %>
 <br>
-<%= link_to "destroy", "/bcard/destroy/#{@bcard.id}", class: 'link_text' %> 
+<%= link_to "destroy", "/bcard/destroy/#{@bcard.id}", class: 'link-text' %> 
