--- a/app/views/test/home.html.erb
+++ b/app/views/test/home.html.erb
@@ -1,6 +1,7 @@
 <h1><%=@message %></h1>
 
 <ul>
-    <li><%= link_to "一覧", "/bcard/index"%></li>
+    <li><%= link_to "Cards", "/bcard/index"%></li>
     <li>iiii</li>
+    <!-- <button id="test1">ボタン</button> -->
 </ul>
