--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New user</h1>
-
-<%= render "form", user: @user %>
-
-<br>
-
-<div>
-  <%= link_to "Back to users", users_path %>
-</div>
+<h1>Users#new</h1>
+<p>Find me in app/views/users/new.html.erb</p>
+<%= form_with model: @user, url: '/users/create', local: true  do |form| %>
+<h2>id</h2>
+<%= form.text_field :user_id %>
+  <h2>Name</h2>
+<%= form.text_field :name %>
+  <h2>password</h2>
+<%= form.text_field :password %>
+  <%= form.submit class: 'link-text'  %>
+<% end %>
