--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -91,54 +91,6 @@
     color: #4b627a;
 }
 
-/* home */
-
-
-.bcards {
-    margin: 40px;
-}
-.theader {
-    color: gray;
-    font-size: 8px;
-}
-
-/* .bcards {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
-td {
-    border-collapse: collapse;
-    border: 1px solid gray;
-
-}
-
-.bcards .th-company {
-    color:#525252;
-    width: 12em;
-}
-.bcards .th-name {    
-    color:#525252;
-    width: 8em;
-}
-.bcards .th-phone_num {
-    color:#525252;
-    width: 8em;
-}
-
-.bcards .td-company {
-    color:#202020;
-    width: 12em;
-}
-.bcards .td-name {
-    color:#222222;
-    width: 8em;
-}
-.bcards .td-phone_num {
-    color:#525252;
-    width: 8em;
-}
-
 .detail-title {
     margin: 40px 0px 4px;
     color: rgb(146, 146, 146);
@@ -153,6 +105,28 @@ td {
     font-size: 14px;
     font-family:Georgia, 'Times New Roman', Times, serif
 }
+/* home */
+
+
+/* search-header */
+.search-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+     flex-flow: row wrap-reverse;
+}
+.sort-form {
+    white-space: nowrap; 
+}
+
+.search-box {
+    width: 240px;
+    height: 24px;
+    border-radius: 5px;
+    margin-top: 1em;
+    background: #f1f1f1;
+}
+
 
 /* DDL */
 select {
@@ -173,9 +147,9 @@ select {
     /* personally added */
     margin-top: 1em;
 
-  }
-  
-  option[selected][disabled] {
+}
+
+option[selected][disabled] {
     display: none;
-  }
+}
 
